--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-BOT_TOKEN=7818355035:AAEgxIzZAB7ou1Q1XfXl9-dWbdCrvJB99p0
+BOT_TOKEN=8216878945:AAFsBF9ZQTft6MuQxBLXWnHbrvUwKoFVjsg
+WEBHOOK_URL=https://xxxkg-production.up.railway.app
